fix auto login bug

--- a/web-module/src/main/resources/templates/login.html
+++ b/web-module/src/main/resources/templates/login.html
@@ -9,13 +9,10 @@
     <script src="/js/jquery/jquery.js"></script>
     <script src="/js/vue/vue.min.js"></script>
     <script src="/element-ui/lib/index.js"></script>
-    <!--<script src="/js/elementui/index.js"></script>-->
     <script src="/js/bootstrap/bootstrap.min.js"></script>
-    <!--<script src="/js/notify.js"></script>-->
-    <!--<script src="/js/bootstrap-notify.min.js"></script>-->
     <script src="/js/utils/jwt_utils.js"></script>
     <script src="/js/components/login_board.js"></script>
-
+    <script src="/js/components/top_column.js"></script>
 </head>
 <body>
 <div id="app" width="100%">
