add file store page

--- a/web-module/src/main/resources/templates/login.html
+++ b/web-module/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 <body>
 <div id="app" width="100%">
     <div id="logo">
-        <a href="">
+        <a href="/">
             <img src="/img/img_logo.jpg" style="width: 100px;" class="img-circle"/>
             <img src="/img/text_logo.png"/>
         </a>
