--- a/web-module/src/main/resources/templates/login.html
+++ b/web-module/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
     <br/>
     <login_board
             service_url="postLogin"
-            register_url=""
+            register_url="register"
             forget_password_url=""
             class="col-lg-offset-5 col-lg-2
               col-md-offset-3 col-md-6
