--- a/web-module/src/main/resources/templates/register.html
+++ b/web-module/src/main/resources/templates/register.html
@@ -12,6 +12,7 @@
     <script src="/element-ui/lib/index.js"></script>
     <script src="/js/bootstrap/bootstrap.min.js"></script>
     <script src="/js/verify.min.js"></script>
+    <script src="/js/utils/jwt_utils.js"></script>
 </head>
 <body>
 <div id="app">
@@ -99,14 +100,14 @@
                     let status = -2;
                     let message = "";
                     $.post({
-                        url: '',
+                        url: '/user/register',
                         data: this.userForm,
                         dataType: 'json',
                         success: function (data) {
                             status = data.status;
                             //success
                             if (data.status == 0) {
-
+                                storeJwt(data.data);
                                 window.location.href = "/";
                             }
                             if (data.status == 1) {
